# hdwallet-service

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/abmatrix/hdwallet_service/: HdwalletServicePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/abmatrix/hdwallet_service_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: hdwallet_service.podspec
ios/Classes/: HdwalletServicePlugin.h  HdwalletServicePlugin.m  SwiftHdwalletServicePlugin.swift
lib/: qmrmb_hdwallet_service.dart
lib/src/: hdwallet.dart  isolate_worker.dart
lib/src/ffi/: ffi.dart  wallet_api.dart
lib/src/ffi/protobuf/: api.proto  cita.proto  ethereum.proto  filecoin.proto  params.proto  solana.proto
lib/src/types/: account.dart  chain.dart  error.dart  type.dart  wallet.dart
lib/src/util/: helper.dart
native/: Cargo.toml  Makefile.toml  binding.h  build.rs
native/src/: lib.rs
test/: wallet_ffi_test.dart
