[package]
name = "hdwallet-ffi"
version = "0.1.0"
edition = "2018"

[lib]
name = "hdwallet_ffi"
crate-type = ["cdylib"]

[dependencies]
tcx-chain= {git="https://github.com/laicj2025/token-core.git",version="0.1.1",branch="m150"}
tcx-primitive = {git="https://github.com/laicj2025/token-core.git",version="0.1.1",branch="m150"}
tcx = {git="https://github.com/laicj2025/token-core.git",version="0.1.1",branch="m150"}
hex = "0.4.0"
failure = "0.1.5"
lazy_static = "1.3.0"
parking_lot = "0.10"
prost = "0.6.1"

[build-dependencies]
cbindgen = "0.14.3"
dart-bindgen = "0.1.7"

[profile.release]
lto = true
codegen-units = 1
debug = false

[patch.crates-io]
forest_address = { git = "https://github.com/laicj2025/forest.git", branch = "token-core" }
